logo fix on Iphone X and further at landscape orientation

--- a/exam-layout/scss/header/logo.scss
+++ b/exam-layout/scss/header/logo.scss
@@ -81,6 +81,7 @@
     justify-self: flex-end;
     position: fixed;
     right:10vw;
+    margin-top: auto;
     .home-link-logo{
       display: flex;
       text-decoration: none;
