--- a/exam-layout/scss/style.css
+++ b/exam-layout/scss/style.css
@@ -64,7 +64,8 @@
     align-self: center;
     justify-self: flex-end;
     position: fixed;
-    right: 10vw; }
+    right: 10vw;
+    margin-top: auto; }
     .logo .home-link-logo {
       display: flex;
       text-decoration: none; }
@@ -2040,12 +2041,12 @@ header {
   top: 40vh;
   right: 0;
   background: rgba(255, 255, 255, 0.5);
-  height: 500px;
-  max-width: 20px;
+  max-height: 500px;
+  min-width: 30px;
   border-bottom-left-radius: 10px;
   border-top-left-radius: 10px; }
   .social:hover {
-    width: 4vw;
+    width: 20%;
     background-color: rgba(255, 255, 255, 0.8); }
     .social:hover p {
       display: none; }
